Update Alarm.java